# ArgParser

./: CMakeLists.txt  README.md  TASK.md
.github/workflows/: ci_tests.yml
lib/: ArgParser.cpp  ArgParser.h  Argument.h  ArgumentBuilder.cpp  ArgumentBuilder.h  BasicFunctions.cpp  BasicFunctions.hpp  BoolArgument.cpp  BoolArgument.hpp  BoolArgumentBuilder.cpp  BoolArgumentBuilder.h  CMakeLists.txt  CompositeArgument.cpp  CompositeArgument.hpp  CompositeArgumentBuilder.cpp  CompositeArgumentBuilder.h  ConcreteArgument.cpp  ConcreteArgument.hpp  ConcreteArgumentBuilder.hpp  HelpComposer.cpp  HelpComposer.h  LongArgument.cpp  LongArgument.hpp  LongArgumentBuilder.cpp  LongArgumentBuilder.h  StringArgument.cpp  StringArgument.hpp  StringArgumentBuilder.cpp  StringArgumentBuilder.h
lib/argparser/: ArgParser.cpp  ArgParser.h  ArgParser.hpp  ArgParserConcepts.hpp  Argument.h  Argument.hpp  ArgumentBuilder.h  ArgumentBuilder.hpp  CMakeLists.txt  ConcreteArgument.cpp  ConcreteArgument.hpp  ConcreteArgument.inl  ConcreteArgumentBuilder.hpp
lib/argparser/basic/: BasicFunctions.cpp  BasicFunctions.hpp  CMakeLists.txt  ConditionalOutput.hpp  ErrorOutput.hpp
lib/argparser/docs/: ArgParser.md  ConcreteArgumentBuilder.md  README.md
lib/argparser/docs/dev/: architecture.md  problem.md  requirements.md
lib/basic/: BasicFunctions.cpp  CMakeLists.txt
lib/docs/: ArgParser.md  README.md
lib/docs/dev/: architecture.md  problem.md  requirements.md
lib/parser-old/: CMakeLists.txt  argument.hpp  arguments_parser.cpp  arguments_parser.hpp  bool_argument.cpp  bool_argument.hpp  composite_argument.cpp  composite_argument.hpp  long_argument.cpp  long_argument.hpp  string_argument.cpp  string_argument.hpp
tests/: ArgParserUnitTestSuite.cpp  ArgParserUnitTestSuite.hpp  CMakeLists.txt  argparser_test.cpp  argparser_unit_tests.cpp  test_functions.cpp  test_functions.hpp  unit_tests.cpp
